[*] Activated Achievement Plug-In

--- a/RogueLiteMultiplayer.uproject
+++ b/RogueLiteMultiplayer.uproject
@@ -7,6 +7,11 @@
 		{
 			"Name": "AchievementSystem",
 			"Enabled": true
+		},
+		{
+			"Name": "LockOnTarget",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d58106fca28446ec88caad16c5a35fe8"
 		}
 	]
 }
