--- a/RogueLiteMultiplayer.uproject
+++ b/RogueLiteMultiplayer.uproject
@@ -12,6 +12,10 @@
 			"Name": "LockOnTarget",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d58106fca28446ec88caad16c5a35fe8"
+		},
+		{
+			"Name": "MotionWarping",
+			"Enabled": true
 		}
 	]
 }
